# reccd-template

./: LICENSE  README.md  black.sh  build.cython.sh  build.sh  clean.sh  flake8.sh  init-daemon.sh  init.sh  isort.cfg  isort.sh  mypy.sh  project.dic  pytest.ini  pytest.sh  python  requirements.main.txt  requirements.txt  setup.cfg  setup.cython.py  setup.py  setup_utils.py  setup_variables.py  tox.ini  uninstall.sh  upgrade.sh
answer_daemon_template/: __init__.py
answer_daemon_template/daemon/: daemon.py  singleton_daemon.py
reccd_template/: __init__.py
test/daemon/: test_singleton_daemon.py
