[metadata]
name = reccd-template
description = ...
version = attr: reccd_template.__version__
url = ...
author = ...
author_email = ...
maintainer = ...
maintainer_email = ...
project_urls =
    GitHub: issues = ...
    GitHub: repo = ...
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_files = LICENSE
keywords =
    reccd
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development
    Topic :: Utilities
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.9
packages = find:
tests_require = pytest

[options.packages.find]
exclude =
    tester*
